--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,24 +1,21 @@
-// .question {
-//   color: red;
-// }
-
-// .result {
-//   color: blue;
-// }
-
-// .main_block {
-//   // border: 1px solid red;
-// }
-
-.main_block {
-  // display: block;
-  // clear: both;
-  // border: red solid 1px;
-  overflow: hidden;
+#body_wrapper {
   background-color: $grey-color-light;
   padding: 20px;
-  margin: 20px 0;
+}
 
+.main_block {
+  overflow: hidden;
+  // background-color: $grey-color-light;
+  // padding: 20px;
+  margin: 0;
+
+}
+
+#more_block {
+  overflow: hidden;
+  // background-color: $grey-color-light;
+  // padding: 20px;
+  margin:0;
 }
 
 .option_wrapper {
@@ -29,27 +26,30 @@
 .option_button {
   // -webkit-appearance: button;
   list-style-type: none;
+  display: block;
   margin: 0;
   padding: 0;
   float: left;
-  width: 44%;
+  width: 46%;
   height: 100%;
-  background-color: $grey-color;
-  margin-left: 3%;
-  &:hover { color: darken($grey-color, 15%)};
-
+  text-align: center;
 }
 
-.option_button:first-child {
-  background-color: $grey-color;
-  margin-left: 0;
-  margin-right: 3%;
+.first {
+  background-color: #184059;
+  margin: 0 2%;
+}
+
+.second {
+  background-color: #8C3534;
+  margin: 0 2%;
 }
 
 .option_button_link {
   display: block;
-  text-align: center;
+  // text-align: center;
   padding: 10px;
+  height: 100%;
 }
 
 .option_button > a {
@@ -59,4 +59,8 @@
 #start_over {
   display: block;
   clear: both;
+}
+
+#more_block, #more_text, #less_link {
+  display: none;
 }
