fixed buggy more/less links
fingers crossed!

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -61,6 +61,8 @@
   clear: both;
 }
 
-#more_block, #more_text, #less_link {
+#more_link, #more_text, #less_link {
   display: none;
 }
+
+#less_link, #more_link { cursor: pointer; }
